<resources>
    <string name="app_name">BookList</string>
    <string name="string_name">Name</string>
    <string name="String_ok">确定</string>
    <string name="String_cancel">取消</string>

    <string name="string_menu_add">添加</string>
    <string name="string_menu_edit">修改</string>
    <string name="string_menu_delete">删除</string>

    <string name="string_confirmation">确定</string>
    <string name="string_cancel">取消</string>
    <string name="string_confirm_delete">你确定要删除</string>
    <string name="hint">提示</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>